--- a/Day 3/index.html
+++ b/Day 3/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Advent Of Code Day x</title>
+	<title>Advent Of Code Day 3</title>
 </head>
 <body>
 	
 	<script src="part1.js"></script>
+	<script src="part2.js"></script>
 </body>
 </html>
